# openocd

./: .dockerignore  .gitignore  .gitmodules  BUILD_REVIEW.md  CONTRIBUTING.md  FIX_NOTES.md  MERGE_MANIFEST.md  Makefile.am  README.DOCKER_PACKAGING.md  README.Windows.md  README.macOS.md  README.md  SECURITY.md  compose.yaml  configure.ac  docker-bake.hcl  docker-compose.yml  install-overwrite.ps1  install-overwrite.sh
build-native/: confdefs.h  (+1 more)
gens/dspic-svd-repo(2)/dspic-svd/: CONTRIBUTING.md  NOTICE  README.md  THIRD_PARTY.md  packs.toml  pyproject.toml
gens/dspic-svd-repo(2)/dspic-svd/devices/: dspic30f5011.yaml  dspic33fj128mc802.yaml  dspic33fj128mc804.yaml
gens/dspic-svd-repo(2)/dspic-svd/html/: README.md
gens/dspic-svd-repo(2)/dspic-svd/metadata/: README.md
gens/dspic-svd-repo(2)/dspic-svd/mmaps/: README.md
gens/dspic-svd-repo(2)/dspic-svd/renode/: README.md  TEST_REPORT.md  cortex-debug-renode.launch.jsonc  dspic30f5011.resc
gens/dspic-svd-repo(2)/dspic-svd/scripts/: make_mmaps.py  makehtml.py  update_packs.py  validate_renode.py
gens/dspic-svd-repo(2)/dspic-svd/sources/: README.md
gens/dspic-svd-repo(2)/dspic-svd/tests/: test_edc.py  test_manifest.py  test_pack_lookup.py  test_renode.py  test_writer_validate.py
gens/dspic-svd-repo(2)/dspic-svd/vscode-support/: CHANGELOG.md  package.json
gens/ti-c2000-debug-svd/: .gitignore  README.md  pyproject.toml
gens/ti-c2000-debug-svd/.github/workflows/: ci.yml
gens/ti-c2000-debug-svd/bridge/: protocol.schema.json
gens/ti-c2000-debug-svd/docs/: addressing.md
gens/ti-c2000-debug-svd/examples/vscode/: c2000-f28069-ccs.launch.jsonc  c2000-openocd-experimental.launch.jsonc  c28x-peripheral-viewer.fragment.jsonc
gens/ti-c2000-debug-svd/extension/: c2000-debug-0.1.0.vsix  package.json  tsconfig.json
gens/ti-c2000-debug-svd/extension/scripts/: clean.js
gens/ti-c2000-debug-svd/extension/src/: adapter.ts  dap.ts  extension.ts  protocol.ts
gens/ti-c2000-debug-svd/extension/test/: bridge.test.js  dap-mock.test.js
gens/ti-c2000-debug-svd/extension/types/: node-lite.d.ts
gens/ti-c2000-debug-svd/scripts/: bootstrap.sh  validate_all.py
gens/ti-c2000-debug-svd/src/ti_svd/: cli.py  pack.py  tixml.py  util.py
gens/ti-c2000-debug-svd/tests/: test_generator.py
tools/microchip/open_microchip_tools/: OPENOCD_IMPORT.md  README.md  pyproject.toml
tools/microchip/open_microchip_tools/docs/: README.md  openocd_integration.md  troubleshooting.md  validation_matrix.md
tools/microchip/open_microchip_tools/mchp_gdbrsp/: client.py  demo.py  rsp.py
tools/microchip/open_microchip_tools/mchp_ipecmd/: client.py  server.py
tools/microchip/open_microchip_tools/mchp_mdbcore/: message_mediator.py
tools/microchip/open_microchip_tools/mchp_renode_cosim/: gdb_session.py
tools/microchip/open_microchip_tools/mchp_ri4/: __init__.py  demo.py  family_profiles.py  firmware_update.py  hardware_roundtrip_cli.py  java_knowledge.py  ri4_com.py  ri4_debug_cli.py  script.py  transport.py
tools/microchip/open_microchip_tools/mchp_simulator/: debug_backend.py  firmware_image.py  simulator.py  simulator_exception.py
tools/microchip/open_microchip_tools/mchp_vscode/: __init__.py  backend_server.py
tools/microchip/open_microchip_tools/sim_gui/: rxconfig.py
tools/microchip/open_microchip_tools/tests/: test_backend_server.py  test_device_file_parser.py  test_device_file_smoke.py  test_dspic30_renode_integration.py  test_firmware_image_hex_export.py  test_firmware_simulator_hex.py  test_firmware_update.py  test_hardware_roundtrip_cli.py  test_java_knowledge.py  test_message_mediator_smoke.py  test_openocd_overlay_installer.py  test_pk4_observed_profile.py  test_pk4_recovery_project.py  test_power_control.py  test_renode_cosim_protocol.py  test_renode_cosim_socket_agent.py  test_renode_gdb_session.py  test_ri4_debug_cli.py  test_simulator_smoke.py  test_zephyr_pickit4_catalog.py  test_zephyr_pk4_observed_session.py
tools/microchip/open_microchip_tools/zephyr_pickit4_replacement/: CMakeLists.txt  README.md  demo.py  pic18_stub_session.py  pk4_observed_session.py  pk4_recovery_project.py
tools/ti/c2000_toolchain/: LICENSE  OPENOCD_IMPORT.md  README.md  pyproject.toml
tools/ti/c2000_toolchain/devices/: mspm0c1103.toml  tms320f280049.toml  tms320f28m35x_m3.toml
tools/ti/c2000_toolchain/docs/: architecture.md  ccs-bridge.md  cortex-debug.md  openocd-xds100.md
tools/ti/c2000_toolchain/extension/: README.md  package.json
tools/ti/c2000_toolchain/patches/: mspm0c1103.json  tms320f280049.json  tms320f28069.json  tms320f28m35x_c28x.json  tms320f28m35x_m3.json
tools/ti/c2000_toolchain/reports/: merge-0.3.0.md
tools/ti/c2000_toolchain/scripts/: install-openocd-xds100.ps1  install-openocd-xds100.sh  update_all.py  validate_release.py
tools/ti/c2000_toolchain/tests/: test_generator.py
(+646 files in other folders)
