[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ti-c2000-mspm0-svd"
version = "0.3.0"
description = "TI SVD generation and a VS Code C2000 C28x debug adapter"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "CodeLayer"}]
dependencies = []

[project.scripts]
ti-svd = "ti_svd.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
