[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ti-c2000-toolchain"
version = "0.3.0"
description = "Unified TI C2000/MSPM0 SVD, VS Code debug, Renode, and OpenOCD XDS100 toolchain"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "CodeLayer"}]
dependencies = []

[project.scripts]
ti-svd = "ti_svd.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
